moved azure user roles to env file

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_AAD_CALLback=http://localhost:3000/
 REACT_APP_AUTHORITY=https://sstapps.b2clogin.com/tfp/sstapps.onmicrosoft.com/B2C_1_default_sign_in/oauth2/v2.0/authorize
 REACT_APP_AAD_APP_CLIENT_ID=ca2a7077-589c-4d14-80c4-14d1407b58ab
-REACT_APP_AAD_SCOPES=["https://SSTapps.onmicrosoft.com/insightsapitest/user_impersonation", "openid", "offline_access"]
+REACT_APP_AAD_SCOPES="https://SSTapps.onmicrosoft.com/insightsapitest/user_impersonation openid offline_access"
 INSIGHT_API="https://localhost:5003/api/Dashboard/"
 DISTRACTIONS_API="https://localhost:5003/api/Distractions/"
 ROOMTRAFFIC_API="https://localhost:5003/api/RoomTraffic/"
