Added generic card component and also every page has ability to get token back after refresh

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "prop-types": "15.6.1",
     "rc-menu": "^7.4.21",
     "react": "^16.4.0",
-    "react-aad-msal": "^0.4.6",
+    "react-aad-msal": "^0.4.7",
     "react-dom": "^16.4.0",
     "react-helmet": "5.2.0",
     "react-i18nify": "^1.11.14",
@@ -73,6 +73,7 @@
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.0",
     "redux-thunk": "^2.3.0",
+    "redux-watch": "^1.1.1",
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "warning": "^4.0.1",
