--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ PROCEDURE_API="https://localhost:5003/api/ProcedureFilter/procedure"
 CULTURESURVEY_API="https://localhost:5005/api/CultureSurvey"
 PUBLISHEDSURVEY_API="https://localhost:5005/api/PublishedSurveyFilter/publishedsurvey"
 MOSTRECENTSURVEY_API="https://localhost:5005/api/PublishedSurveyFilter/latestpublishedsurvey"
+USERMANAGEMENT_API="https://localhost:5001/api/users/"
+DEPARTMENTFACILITY_API="https://localhost:5002/api/Department/facility"
