--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "@weknow/react-bubble-chart-d3": "^1.0.11",
     "babel-polyfill": "6.26.0",
     "chalk": "^2.3.2",
     "compression": "1.7.2",
     "cross-env": "^5.1.6",
+    "date-fns": "^2.9.0",
     "dotenv": "^7.0.0",
     "express": "4.16.3",
     "fontfaceobserver": "2.0.13",
@@ -49,14 +50,15 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "lodash": "^4.17.10",
+    "material-table": "^1.57.1",
     "minimist": "1.2.0",
     "moment": "^2.24.0",
     "npm": "^6.5.0",
     "prop-types": "15.6.1",
     "rc-menu": "^7.4.21",
-    "react": "^16.4.0",
+    "react": "^16.8.5",
     "react-aad-msal": "^0.4.7",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.8.4",
     "react-helmet": "5.2.0",
     "react-i18nify": "^1.11.14",
     "react-loadable": "^5.4.0",
