Continue with changes to add a user

--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ PUBLISHEDSURVEY_API="https://localhost:5005/api/PublishedSurveyFilter/publisheds
 MOSTRECENTSURVEY_API="https://localhost:5005/api/PublishedSurveyFilter/latestpublishedsurvey"
 USERMANAGEMENT_API="https://localhost:5001/api/users/"
 DEPARTMENTFACILITY_API="https://localhost:5002/api/Department/facility"
+USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
