Beginnings of editing a user

--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ MOSTRECENTSURVEY_API="https://localhost:5005/api/PublishedSurveyFilter/latestpub
 USERMANAGEMENT_API="https://localhost:5001/api/users/"
 DEPARTMENTFACILITY_API="https://localhost:5002/api/Department/facility"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
+USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
