Enable/disable a user

--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ USERMANAGEMENT_API="https://localhost:5001/api/users/"
 DEPARTMENTFACILITY_API="https://localhost:5002/api/Department/facility"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
 USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
+USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
