--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-helmet": "5.2.0",
     "react-i18nify": "^1.11.14",
     "react-loadable": "^5.4.0",
+    "react-loading-overlay": "^1.0.1",
     "react-redux": "5.0.7",
     "react-redux-i18n": "^1.9.3",
     "react-router-dom": "^4.3.1",
