Error Message updating and handling from server If a user has user management admin, also give them insights admin

--- a/.env
+++ b/.env
@@ -3,15 +3,7 @@ REACT_APP_AUTHORITY=https://sstapps.b2clogin.com/tfp/sstapps.onmicrosoft.com/B2C
 REACT_APP_AAD_APP_CLIENT_ID=ca2a7077-589c-4d14-80c4-14d1407b58ab
 REACT_APP_AAD_SCOPES="https://SSTapps.onmicrosoft.com/insightsapitest/user_impersonation openid offline_access"
 INSIGHT_API="https://localhost:5003/api/Dashboard/"
-DISTRACTIONS_API="https://localhost:5003/api/Distractions/"
-ROOMTRAFFIC_API="https://localhost:5003/api/RoomTraffic/"
-SURVEY_API="https://localhost:5005/api/culturesurvey"
-USER_API="https://localhost:5003/api/Location/facility"
-ROOMS_API="https://localhost:5002/api/room/facility/"
-PROCEDURE_API="https://localhost:5003/api/ProcedureFilter/procedure"
-CULTURESURVEY_API="https://localhost:5005/api/CultureSurvey"
-PUBLISHEDSURVEY_API="https://localhost:5005/api/PublishedSurveyFilter/publishedsurvey"
-MOSTRECENTSURVEY_API="https://localhost:5005/api/PublishedSurveyFilter/latestpublishedsurvey"
+USER_API="https://localhost:5003/api/Profile"
 USERMANAGEMENT_API="https://localhost:5001/api/users/"
 DEPARTMENTFACILITY_API="https://localhost:5002/api/Department/facility"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
