--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ DEPARTMENTFACILITY_API="https://localhost:5002/api/Department/facility"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
 USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
+USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
+EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
