--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
 USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
+EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
