--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "test:watch": "cross-env NODE_ENV=test jest --watchAll"
   },
   "dependencies": {
+    "@date-io/core": "^1.3.13",
+    "@date-io/date-fns": "^1.3.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@weknow/react-bubble-chart-d3": "^1.0.11",
     "babel-polyfill": "6.26.0",
     "chalk": "^2.3.2",
