--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
 USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
+EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
