--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.44",
     "@material-ui/pickers": "^3.2.10",
     "@weknow/react-bubble-chart-d3": "^1.0.11",
     "babel-polyfill": "6.26.0",
