Add users to notify emails to request emm

--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
+USERSEARCH_API="https://localhost:5003/api/users"
