--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
     "react-scripts": "^2.1.8",
+    "react-select": "^3.0.8",
     "react-table": "^6.9.2",
     "react-thunk": "^1.0.0",
     "recharts": "^1.5.0",
