--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-helmet": "5.2.0",
     "react-loadable": "^5.4.0",
     "react-loading-overlay": "^1.0.1",
+    "react-minimal-pie-chart": "^6.0.1",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
