--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
 USERSEARCH_API="https://localhost:5003/api/users"
+DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
