--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.44",
+    "@mdi/js": "^5.0.45",
+    "@mdi/react": "^1.3.0",
     "babel-polyfill": "6.26.0",
     "chalk": "^2.3.2",
     "compression": "1.7.2",
