--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "material-table": "^1.57.1",
     "minimist": "1.2.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "npm": "^6.5.0",
     "prop-types": "15.6.1",
     "react": "^16.8.5",
@@ -66,6 +67,7 @@
     "react-loadable": "^5.4.0",
     "react-loading-overlay": "^1.0.1",
     "react-minimal-pie-chart": "^6.0.1",
+    "react-moment": "^0.9.7",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
