--- a/.env
+++ b/.env
@@ -11,5 +11,6 @@ USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
+EMMREPORT_API="https://localhost:5003/api/enhancedmm"
 USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
