--- a/.env
+++ b/.env
@@ -12,5 +12,6 @@ EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
 EMMREPORT_API="https://localhost:5003/api/enhancedmm"
+MEDIA_API="https://localhost:5003/api/media"
 USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
