--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
 USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
 USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
+LOCATIONROOM_API="https://localhost:5002/api/room/facility"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
