Finish general EMM publish outline

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
 USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
+EMMPUBLISHACCESS_API="https://localhost:5003/api/access/emmpublish"
+EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
