Clean up new EMM cases page

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
 USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
 LOCATIONROOM_API="https://localhost:5002/api/room/facility"
+FACILITYLIST_API="https://localhost:5002/api/facility/list"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
