--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
 USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
 LOCATIONROOM_API="https://localhost:5002/api/room/facility"
 FACILITYLIST_API="https://localhost:5002/api/facility/list"
+FACILITYDEPARTMENT_API="https://localhost:5002/api/department/facility"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
