--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
 EMMREPORT_API="https://localhost:5003/api/enhancedmm"
+EMMPUBLISH_API="https://localhost:5003/api/enhancedMM/publish"
 MEDIA_API="https://localhost:5003/api/media"
 USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
