--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 REACT_APP_AAD_CALLback=http://localhost:3000/
-REACT_APP_AUTHORITY=https://sstapps.b2clogin.com/tfp/sstapps.onmicrosoft.com/B2C_1a_default_sign_in/oauth2/v2.0/authorize
-REACT_APP_AAD_APP_CLIENT_ID=ca2a7077-589c-4d14-80c4-14d1407b58ab
-REACT_APP_AAD_SCOPES="https://SSTapps.onmicrosoft.com/insightsapitest/user_impersonation openid offline_access"
+REACT_APP_AUTHORITY=https://sstappstest.b2clogin.com/tfp/sstappstest.onmicrosoft.com/B2C_1a_default_sign_in/oauth2/v2.0/authorize
+REACT_APP_AAD_APP_CLIENT_ID=b1e35ff5-8bf2-4a4b-8b23-6a9c8a9a791c
+REACT_APP_AAD_SCOPES="https://sstappstest.onmicrosoft.com/insightsapitest/user_impersonation openid offline_access"
+B2C_ACCOUNT="sstappstest.b2clogin.com"
+TENANT="sstappstest.onmicrosoft.com"
+CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
+CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
 USER_API="https://localhost:5003/api/Profile"
 USERMANAGEMENT_API="https://localhost:5001/api/users/"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
