update prod/test env files

--- a/.env.test
+++ b/.env.test
@@ -22,3 +22,5 @@ USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
+SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
+COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
