--- a/.env.production
+++ b/.env.production
@@ -18,3 +18,5 @@ USERSEARCH_API="https://insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/request"
+SPECIALTY_API="https://lookup.surgicalsafety.com/api/list/specialty"
+COMPLICATION_API="https://lookup.surgicalsafety.com/api/list/complication"
