Update components and move out horizontal bar chart

--- a/.env.development
+++ b/.env.development
@@ -25,5 +25,6 @@ USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
+SSC_API="https://localhost:5003/api/ssc"
 SPECIALTY_API="http://localhost:5102/api/list/specialty"
 COMPLICATION_API="http://localhost:5102/api/list/complication"
