--- a/.env.production
+++ b/.env.production
@@ -18,5 +18,6 @@ USERSEARCH_API="https://insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/request"
+SSC_API="https://insightsapi.surgicalsafety.com/api/ssc"
 SPECIALTY_API="https://lookup.surgicalsafety.com/api/list/specialty"
 COMPLICATION_API="https://lookup.surgicalsafety.com/api/list/complication"
