Complete saving filter - Move barchart to component

--- a/.env.test
+++ b/.env.test
@@ -23,5 +23,6 @@ DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/til
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
 SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
+SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
 COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
