--- a/.env.development
+++ b/.env.development
@@ -26,5 +26,6 @@ DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
 SSC_API="https://localhost:5003/api/ssc"
+SSCTILE_API="https://localhost:5003/api/ssc/tile"
 SPECIALTY_API="http://localhost:5102/api/list/specialty"
 COMPLICATION_API="http://localhost:5102/api/list/complication"
