--- a/.env.test
+++ b/.env.test
@@ -18,6 +18,7 @@ FACILITYDEPARTMENT_API="https://test-location.surgicalsafety.com/api/department/
 EMMACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/request"
+EMMREPORT_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm"
 USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
