clean up styling - add ssc access api

--- a/.env.production
+++ b/.env.production
@@ -18,6 +18,7 @@ USERSEARCH_API="https://insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/request"
+SSC_ACCESS_API="https://insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://insightsapi.surgicalsafety.com/api/ssc"
 SSCTILE_API="https://insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://lookup.surgicalsafety.com/api/list/specialty"
