--- a/.env.test
+++ b/.env.test
@@ -22,6 +22,7 @@ USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
+SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
 SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
