--- a/.env.development
+++ b/.env.development
@@ -25,6 +25,7 @@ USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
+SSC_ACCESS_API="https://localhost:5003/api/ssc/access"
 SSC_API="https://localhost:5003/api/ssc"
 SSCTILE_API="https://localhost:5003/api/ssc/tile"
 SPECIALTY_API="http://localhost:5102/api/list/specialty"
