--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@material-ui/lab": "4.0.0-alpha.44",
     "@mdi/js": "5.0.45",
     "@mdi/react": "1.3.0",
+    "axios": "^0.19.2",
     "babel-polyfill": "6.26.0",
     "chalk": "2.3.2",
     "compression": "1.7.2",
@@ -64,8 +65,8 @@
     "prop-types": "15.6.1",
     "react": "16.8.5",
     "react-aad-msal": "0.4.7",
-    "react-dom": "16.8.4",
     "react-c3js": "^0.1.20",
+    "react-dom": "16.8.4",
     "react-helmet": "5.2.0",
     "react-idle-timer": "4.2.12",
     "react-loadable": "5.4.0",
