Update prod API URLs

--- a/.env.production
+++ b/.env.production
@@ -21,5 +21,5 @@ EMMCASESREQUEST_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/reque
 SSC_ACCESS_API="https://insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://insightsapi.surgicalsafety.com/api/ssc"
 SSCTILE_API="https://insightsapi.surgicalsafety.com/api/ssc/tile"
-SPECIALTY_API="https://lookup.surgicalsafety.com/api/list/specialty"
-COMPLICATION_API="https://lookup.surgicalsafety.com/api/list/complication"
+SPECIALTY_API="https://lookupsapi.surgicalsafety.com/api/list/specialty"
+COMPLICATION_API="https://lookupsapi.surgicalsafety.com/api/list/complication"
