Add no data views

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,10 @@ REACT_APP_AAD_CALLback=https://insights.surgicalsafety.com/
 REACT_APP_AUTHORITY=https://sstapps.b2clogin.com/tfp/sstapps.onmicrosoft.com/B2C_1a_default_sign_in/oauth2/v2.0/authorize
 REACT_APP_AAD_APP_CLIENT_ID=99ed3764-67fc-4549-9458-626c0d92f228
 REACT_APP_AAD_SCOPES="https://SSTapps.onmicrosoft.com/InsightsApi/user_impersonation openid offline_access"
+B2C_ACCOUNT="sstapps.b2clogin.com"
+TENANT="sstapps.onmicrosoft.com"
+CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
+CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
 USER_API="https://insightsapi.surgicalsafety.com/api/Profile"
 USERMANAGEMENT_API="https://usersapi.surgicalsafety.com/api/users/"
 USERMANAGEMENTUSERROLES_API="https://usersapi.surgicalsafety.com/api/userroles/"
@@ -14,12 +18,15 @@ FACILITYDEPARTMENT_API="https://locationapi.surgicalsafety.com/api/department/fa
 EMMACCESS_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/request"
+EMMPUBLISH_API="https://insightsapi.surgicalsafety.com/api/enhancedMM/publish"
+MEDIA_API="https://insightsapi.surgicalsafety.com/api/media"
 USERSEARCH_API="https://insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/request"
 SSC_ACCESS_API="https://insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://insightsapi.surgicalsafety.com/api/ssc"
+SSC_REPORT_READY_DAY=15
 SSCTILE_API="https://insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://lookupsapi.surgicalsafety.com/api/list/specialty"
 COMPLICATION_API="https://lookupsapi.surgicalsafety.com/api/list/complication"
