--- a/.env.development
+++ b/.env.development
@@ -27,6 +27,7 @@ EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
 SSC_ACCESS_API="https://localhost:5003/api/ssc/access"
 SSC_API="https://localhost:5003/api/ssc"
+SSC_REPORT_READY_DAY=15
 SSCTILE_API="https://localhost:5003/api/ssc/tile"
 SPECIALTY_API="http://localhost:5102/api/list/specialty"
 COMPLICATION_API="http://localhost:5102/api/list/complication"
