--- a/.env.test
+++ b/.env.test
@@ -19,12 +19,15 @@ EMMACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access
 EMMREQUESTACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/request"
 EMMREPORT_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm"
+EMMPUBLISH_API="https://test-insightsapi.surgicalsafety.com/api/enhancedMM/publish"
+MEDIA_API="https://test-insightsapi.surgicalsafety.com/api/media"
 USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
 SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
+SSC_REPORT_READY_DAY=15
 SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
 COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
