Update settings to be test

--- a/.env.uat
+++ b/.env.uat
@@ -1,9 +1,9 @@
 REACT_APP_AAD_CALLback=https://uat-insights.surgicalsafety.com/
-REACT_APP_AUTHORITY=https://sstapps.b2clogin.com/tfp/sstapps.onmicrosoft.com/B2C_1a_default_sign_in/oauth2/v2.0/authorize
-REACT_APP_AAD_APP_CLIENT_ID=99ed3764-67fc-4549-9458-626c0d92f228
-REACT_APP_AAD_SCOPES="https://SSTapps.onmicrosoft.com/InsightsApi/user_impersonation openid offline_access"
-B2C_ACCOUNT="sstapps.b2clogin.com"
-TENANT="sstapps.onmicrosoft.com"
+REACT_APP_AUTHORITY=https://sstappstest.b2clogin.com/tfp/sstappstest.onmicrosoft.com/B2C_1a_default_sign_in/oauth2/v2.0/authorize
+REACT_APP_AAD_APP_CLIENT_ID=b1e35ff5-8bf2-4a4b-8b23-6a9c8a9a791c
+REACT_APP_AAD_SCOPES="https://sstappstest.onmicrosoft.com/insightsapitest/user_impersonation openid offline_access"
+B2C_ACCOUNT="sstappstest.b2clogin.com"
+TENANT="sstappstest.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
 USER_API="https://uat-insightsapi.surgicalsafety.com/api/Profile"
