Update .env uat Missing api

--- a/.env.uat
+++ b/.env.uat
@@ -18,6 +18,7 @@ FACILITYDEPARTMENT_API="https://uat-location.surgicalsafety.com/api/department/f
 EMMACCESS_API="https://uat-insightsapi.surgicalsafety.com/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://uat-insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://uat-insightsapi.surgicalsafety.com/api/EnhancedMM/request"
+EMMREPORT_API="https://uat-insightsapi.surgicalsafety.com/api/enhancedmm"
 EMMPUBLISH_API="https://uat-insightsapi.surgicalsafety.com/api/enhancedMM/publish"
 MEDIA_API="https://uat-insightsapi.surgicalsafety.com/api/media"
 USERSEARCH_API="https://uat-insightsapi.surgicalsafety.com/api/users"
