change from test server to local servers

--- a/.env.development
+++ b/.env.development
@@ -6,25 +6,27 @@ B2C_ACCOUNT="sstappstest.b2clogin.com"
 TENANT="sstappstest.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
-USER_API="https://test-insightsapi.surgicalsafety.com/api/Profile"
-USERMANAGEMENT_API="https://test-users.surgicalsafety.com/api/users/"
-USERMANAGEMENTUSERROLES_API="https://test-users.surgicalsafety.com/api/userroles/"
-USERMANAGEMENTRESET_API="https://test-users.surgicalsafety.com/api/users/resetpassword"
-USERMANAGMENTACTIVATE_API="https://test-users.surgicalsafety.com/api/users/activate"
-USERMANAGEMENTACCESS_API="https://test-users.surgicalsafety.com/api/users/access"
-LOCATIONROOM_API="https://test-location.surgicalsafety.com/api/room/facility"
-FACILITYLIST_API="https://test-location.surgicalsafety.com/api/facility/list"
-FACILITYDEPARTMENT_API="https://test-location.surgicalsafety.com/api/department/facility"
-EMMACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access"
-EMMREQUESTACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
-EMMREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/request"
-EMMREPORT_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm"
-USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
-DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
-EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
-EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
-SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
-SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
-SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
-SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
-COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
+USER_API="https://localhost:5003/api/Profile"
+USERMANAGEMENT_API="https://localhost:5001/api/users/"
+USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
+USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
+USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
+USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
+LOCATIONROOM_API="https://localhost:5002/api/room/facility"
+FACILITYLIST_API="https://localhost:5002/api/facility/list"
+FACILITYDEPARTMENT_API="https://localhost:5002/api/department/facility"
+EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
+EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
+EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
+EMMREPORT_API="https://localhost:5003/api/enhancedmm"
+EMMPUBLISH_API="https://localhost:5003/api/enhancedMM/publish"
+MEDIA_API="https://localhost:5003/api/media"
+USERSEARCH_API="https://localhost:5003/api/users"
+DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
+EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
+EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
+SSC_ACCESS_API="https://localhost:5003/api/ssc/access"
+SSC_API="https://localhost:5003/api/ssc"
+SSCTILE_API="https://localhost:5003/api/ssc/tile"
+SPECIALTY_API="http://localhost:5102/api/list/specialty"
+COMPLICATION_API="http://localhost:5102/api/list/complication"
