Add back removed .env variables

--- a/.env.production
+++ b/.env.production
@@ -18,6 +18,7 @@ FACILITYDEPARTMENT_API="https://locationapi.surgicalsafety.com/api/department/fa
 EMMACCESS_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/request"
+EMMREPORT_API="https://insightsapi.surgicalsafety.com/api/enhancedmm"
 EMMPUBLISH_API="https://insightsapi.surgicalsafety.com/api/enhancedMM/publish"
 MEDIA_API="https://insightsapi.surgicalsafety.com/api/media"
 USERSEARCH_API="https://insightsapi.surgicalsafety.com/api/users"
