https://surgicalsafety.atlassian.net/browse/INSSC-133 On boarding modal front end

--- a/.env.uat
+++ b/.env.uat
@@ -20,6 +20,8 @@ EMMREQUESTACCESS_API="https://uat-insightsapi.surgicalsafety.com/api/EnhancedMM/
 EMMREQUEST_API="https://uat-insightsapi.surgicalsafety.com/api/EnhancedMM/request"
 EMMREPORT_API="https://uat-insightsapi.surgicalsafety.com/api/enhancedmm"
 EMMPUBLISH_API="https://uat-insightsapi.surgicalsafety.com/api/enhancedMM/publish"
+ONBOARD_API="https://uat-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
+USERDETAILSMODIFY_API="https://uat-insightsapi.surgicalsafety.com/api/UserDetails/modify"
 MEDIA_API="https://uat-insightsapi.surgicalsafety.com/api/media"
 USERSEARCH_API="https://uat-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://uat-insightsapi.surgicalsafety.com/api/dashboard/tile"
