--- a/.env.development
+++ b/.env.development
@@ -20,6 +20,8 @@ EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
 EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
 EMMREPORT_API="https://localhost:5003/api/enhancedmm"
 EMMPUBLISH_API="https://localhost:5003/api/enhancedMM/publish"
+ONBOARD_API="https://localhost:5003/api/UserDetails/onBoardCompleted"
+USERDETAILSMODIFY_API="https://localhost:5003/api/UserDetails/modify"
 MEDIA_API="https://localhost:5003/api/media"
 USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
