--- a/.env.test
+++ b/.env.test
@@ -20,6 +20,8 @@ EMMREQUESTACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM
 EMMREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/request"
 EMMREPORT_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm"
 EMMPUBLISH_API="https://test-insightsapi.surgicalsafety.com/api/enhancedMM/publish"
+ONBOARD_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
+USERDETAILSMODIFY_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/modify"
 MEDIA_API="https://test-insightsapi.surgicalsafety.com/api/media"
 USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
