--- a/.env.development
+++ b/.env.development
@@ -27,6 +27,7 @@ USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
+EFFICIENCY_ACCESS_API="https://localhost:5003/api/efficiency/access"
 SSC_ACCESS_API="https://localhost:5003/api/ssc/access"
 SSC_API="https://localhost:5003/api/ssc"
 SSC_REPORT_READY_DAY=15
