--- a/.env.test
+++ b/.env.test
@@ -27,6 +27,7 @@ USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
+EFFICIENCY_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/efficiency/access"
 SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
