--- a/package.json
+++ b/package.json
@@ -59,14 +59,16 @@
     "lodash": "4.17.10",
     "material-table": "1.57.1",
     "minimist": "1.2.0",
-    "moment": "2.24.0",
+    "moment": "^2.24.0",
     "moment-timezone": "0.5.28",
     "npm": "6.5.0",
     "prop-types": "15.6.1",
-    "react": "16.8.5",
+    "react": "^16.8.5",
     "react-aad-msal": "0.4.7",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-c3js": "^0.1.20",
-    "react-dom": "16.8.4",
+    "react-dates": "^21.8.0",
+    "react-dom": "^16.8.4",
     "react-helmet": "5.2.0",
     "react-idle-timer": "4.2.12",
     "react-loadable": "5.4.0",
