https://surgicalsafety.atlassian.net/browse/INEFF-22 Set up base tile structure and finish DisplayNumber

--- a/.env.development
+++ b/.env.development
@@ -28,6 +28,8 @@ DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://localhost:5003/api/efficiency/access"
+EFFICIENCY_API="https://localhost:5003/api/efficiency"
+EFFICIENCYTILE_API="https://localhost:5003/api/efficiency/tile"
 SSC_ACCESS_API="https://localhost:5003/api/ssc/access"
 SSC_API="https://localhost:5003/api/ssc"
 SSC_REPORT_READY_DAY=15
