--- a/.env.test
+++ b/.env.test
@@ -28,6 +28,8 @@ DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/til
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/efficiency/access"
+EFFICIENCY_API="https://test-insightsapi.surgicalsafety.com/api/efficiency"
+EFFICIENCYTILE_API="https://test-insightsapi.surgicalsafety.com/api/efficiency/tile"
 SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
