--- a/.env.production
+++ b/.env.production
@@ -28,6 +28,8 @@ DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://insightsapi.surgicalsafety.com/api/efficiency/access"
+EFFICIENCY_API="https://insightsapi.surgicalsafety.com/api/efficiency"
+EFFICIENCYTILE_API="https://insightsapi.surgicalsafety.com/api/efficiency/tile"
 SSC_ACCESS_API="https://insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
