emm video was hard coded to get files from test

--- a/.env.production
+++ b/.env.production
@@ -22,7 +22,7 @@ EMMREPORT_API="https://insightsapi.surgicalsafety.com/api/enhancedmm"
 EMMPUBLISH_API="https://insightsapi.surgicalsafety.com/api/enhancedMM/publish"
 ONBOARD_API="https://insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://insightsapi.surgicalsafety.com/api/UserDetails/modify"
-MEDIA_API="https://insightsapi.surgicalsafety.com/api/media"
+MEDIA_API="https://insightsapi.surgicalsafety.com/api/media/"
 USERSEARCH_API="https://insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
