--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "lodash": "4.17.10",
     "material-table": "1.57.1",
     "minimist": "1.2.0",
-    "moment": "^2.24.0",
+    "moment": "2.25.3",
     "moment-timezone": "0.5.28",
     "npm": "6.5.0",
     "prop-types": "15.6.1",
