--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ B2C_ACCOUNT="sstappstest.b2clogin.com"
 TENANT="sstappstest.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
+ALLOW_PLUS_EMAILS=true
 USER_API="https://localhost:5003/api/Profile"
 USERMANAGEMENT_API="https://localhost:5001/api/users/"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
