Complete users multi roles

--- a/.env.development
+++ b/.env.development
@@ -10,6 +10,7 @@ ALLOW_PLUS_EMAILS=true
 USER_API="https://localhost:5003/api/Profile"
 USERMANAGEMENT_API="https://localhost:5001/api/users/"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
+USERMANAGEMENTUSERROLES_MULTI_API="https://localhost:5001/api/userroles/multi"
 USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
 USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
