--- a/.env.production
+++ b/.env.production
@@ -9,6 +9,7 @@ CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
 USER_API="https://insightsapi.surgicalsafety.com/api/Profile"
 USERMANAGEMENT_API="https://usersapi.surgicalsafety.com/api/users/"
 USERMANAGEMENTUSERROLES_API="https://usersapi.surgicalsafety.com/api/userroles/"
+USERMANAGEMENTUSERROLES_MULTI_API="https://usersapi.surgicalsafety.com/api/userroles/multi"
 USERMANAGEMENTRESET_API="https://usersapi.surgicalsafety.com/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://usersapi.surgicalsafety.com/api/users/activate"
 USERMANAGEMENTACCESS_API="https://usersapi.surgicalsafety.com/api/users/access"
