--- a/.env.test
+++ b/.env.test
@@ -10,6 +10,7 @@ ALLOW_PLUS_EMAILS=true
 USER_API="https://test-insightsapi.surgicalsafety.com/api/Profile"
 USERMANAGEMENT_API="https://test-users.surgicalsafety.com/api/users/"
 USERMANAGEMENTUSERROLES_API="https://test-users.surgicalsafety.com/api/userroles/"
+USERMANAGEMENTUSERROLES_MULTI_API="https://test-users.surgicalsafety.com/api/userroles/multi"
 USERMANAGEMENTRESET_API="https://test-users.surgicalsafety.com/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://test-users.surgicalsafety.com/api/users/activate"
 USERMANAGEMENTACCESS_API="https://test-users.surgicalsafety.com/api/users/access"
