--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "build:test": "npm run build:clean && cross-env NODE_ENV=test webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:uat": "npm run build:clean && cross-env NODE_ENV=UAT webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:clean": "rimraf ./build",
+    "build:cicd_dev": "npm run build:clean && cross-env NODE_ENV=cicd_dev webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "build:cicd_test": "npm run build:clean && cross-env NODE_ENV=cicd_test webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",    
+    "build:cicd_uat": "npm run build:clean && cross-env NODE_ENV=cicd_uat webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",    
     "start": "cross-env NODE_ENV=development node server",
     "start:production": "npm run test && npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
