Allow pending date on test

--- a/.env.test
+++ b/.env.test
@@ -35,6 +35,7 @@ EFFICIENCYTILE_API="https://test-insightsapi.surgicalsafety.com/api/efficiency/t
 SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
+DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
 COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
