--- a/.env.development
+++ b/.env.development
@@ -35,6 +35,7 @@ EFFICIENCYTILE_API="https://localhost:5003/api/efficiency/tile"
 SSC_ACCESS_API="https://localhost:5003/api/ssc/access"
 SSC_API="https://localhost:5003/api/ssc"
 SSC_REPORT_READY_DAY=15
+DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://localhost:5003/api/ssc/tile"
 SPECIALTY_API="http://localhost:5102/api/list/specialty"
 COMPLICATION_API="http://localhost:5102/api/list/complication"
