Allow Pending on prod

--- a/.env.production
+++ b/.env.production
@@ -34,6 +34,7 @@ EFFICIENCYTILE_API="https://insightsapi.surgicalsafety.com/api/efficiency/tile"
 SSC_ACCESS_API="https://insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
+DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://lookupsapi.surgicalsafety.com/api/list/specialty"
 COMPLICATION_API="https://lookupsapi.surgicalsafety.com/api/list/complication"
