Update procedure API

--- a/.env.test
+++ b/.env.test
@@ -38,4 +38,5 @@ SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
+PROCEDURE_API="https://test-lookup.surgicalsafety.com/api/list/procedure"
 COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
