--- a/.env.production
+++ b/.env.production
@@ -37,4 +37,5 @@ SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://lookupsapi.surgicalsafety.com/api/list/specialty"
+PROCEDURE_API="https://lookupsapi.surgicalsafety.com/api/list/procedure"
 COMPLICATION_API="https://lookupsapi.surgicalsafety.com/api/list/complication"
