--- a/.env.uat
+++ b/.env.uat
@@ -37,4 +37,5 @@ SSC_API="https://uat-insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
 SSCTILE_API="https://uat-insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://uat-lookup.surgicalsafety.com/api/list/specialty"
+PROCEDURE_API="https://uat-lookup.surgicalsafety.com/api/list/procedure"
 COMPLICATION_API="https://uat-lookup.surgicalsafety.com/api/list/complication"
