https://surgicalsafety.atlassian.net/browse/INGEN-16 hide roles users dont have access to

--- a/.env.development
+++ b/.env.development
@@ -14,6 +14,7 @@ USERMANAGEMENTUSERROLES_MULTI_API="https://localhost:5001/api/userroles/multi"
 USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
 USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
+USERMANAGEMENTROLES_API="https://localhost:5001/api/roles"
 LOCATIONROOM_API="https://localhost:5002/api/room/facility"
 FACILITYLIST_API="https://localhost:5002/api/facility/list"
 FACILITYDEPARTMENT_API="https://localhost:5002/api/department/facility"
