--- a/.env.production
+++ b/.env.production
@@ -13,6 +13,7 @@ USERMANAGEMENTUSERROLES_MULTI_API="https://usersapi.surgicalsafety.com/api/userr
 USERMANAGEMENTRESET_API="https://usersapi.surgicalsafety.com/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://usersapi.surgicalsafety.com/api/users/activate"
 USERMANAGEMENTACCESS_API="https://usersapi.surgicalsafety.com/api/users/access"
+USERMANAGEMENTROLES_API="https://usersapi.surgicalsafety.com/api/roles"
 LOCATIONROOM_API="https://locationapi.surgicalsafety.com/api/room/facility"
 FACILITYLIST_API="https://locationapi.surgicalsafety.com/api/facility/list"
 FACILITYDEPARTMENT_API="https://locationapi.surgicalsafety.com/api/department/facility"
