--- a/.env.test
+++ b/.env.test
@@ -14,6 +14,7 @@ USERMANAGEMENTUSERROLES_MULTI_API="https://test-users.surgicalsafety.com/api/use
 USERMANAGEMENTRESET_API="https://test-users.surgicalsafety.com/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://test-users.surgicalsafety.com/api/users/activate"
 USERMANAGEMENTACCESS_API="https://test-users.surgicalsafety.com/api/users/access"
+USERMANAGEMENTROLES_API="https://test-users.surgicalsafety.com/api/roles"
 LOCATIONROOM_API="https://test-location.surgicalsafety.com/api/room/facility"
 FACILITYLIST_API="https://test-location.surgicalsafety.com/api/facility/list"
 FACILITYDEPARTMENT_API="https://test-location.surgicalsafety.com/api/department/facility"
