--- a/.env.uat
+++ b/.env.uat
@@ -14,6 +14,7 @@ USERMANAGEMENTUSERROLES_MULTI_API="https://uat-users.surgicalsafety.com/api/user
 USERMANAGEMENTRESET_API="https://uat-users.surgicalsafety.com/api/users/resetpassword"
 USERMANAGMENTACTIVATE_API="https://uat-users.surgicalsafety.com/api/users/activate"
 USERMANAGEMENTACCESS_API="https://uat-users.surgicalsafety.com/api/users/access"
+USERMANAGEMENTROLES_API="https://uat-users.surgicalsafety.com/api/roles"
 LOCATIONROOM_API="https://uat-location.surgicalsafety.com/api/room/facility"
 FACILITYLIST_API="https://uat-location.surgicalsafety.com/api/facility/list"
 FACILITYDEPARTMENT_API="https://uat-location.surgicalsafety.com/api/department/facility"
