--- a/.env.development
+++ b/.env.development
@@ -38,6 +38,6 @@ SSC_API="https://localhost:5003/api/ssc"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://localhost:5003/api/ssc/tile"
-SPECIALTY_API="http://localhost:5102/api/list/specialty"
-PROCEDURE_API="http://localhost:5102/api/list/procedure"
-COMPLICATION_API="http://localhost:5102/api/list/complication"
+SPECIALTY_API="https://localhost:5102/api/list/specialty"
+PROCEDURE_API="https://localhost:5102/api/list/procedure"
+COMPLICATION_API="https://localhost:5102/api/list/complication"
