proper url to each env file

--- a/.env.development
+++ b/.env.development
@@ -26,6 +26,7 @@ EMMPUBLISH_API="https://localhost:5003/api/enhancedMM/publish"
 ONBOARD_API="https://localhost:5003/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://localhost:5003/api/UserDetails/modify"
 MEDIA_API="https://localhost:5003/api/media/"
+PRESENTER_API="https://localhost:5003/api/media/presenter/"
 USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
