--- a/.env.uat
+++ b/.env.uat
@@ -26,6 +26,7 @@ EMMPUBLISH_API="https://uat-insightsapi.surgicalsafety.com/api/enhancedMM/publis
 ONBOARD_API="https://uat-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://uat-insightsapi.surgicalsafety.com/api/UserDetails/modify"
 MEDIA_API="https://uat-insightsapi.surgicalsafety.com/api/media/"
+PRESENTER_API="https://uat-insightsapi.surgicalsafety.com/api/media/presenter/"
 USERSEARCH_API="https://uat-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://uat-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://uat-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
