--- a/.env.production
+++ b/.env.production
@@ -25,6 +25,7 @@ EMMPUBLISH_API="https://insightsapi.surgicalsafety.com/api/enhancedMM/publish"
 ONBOARD_API="https://insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://insightsapi.surgicalsafety.com/api/UserDetails/modify"
 MEDIA_API="https://insightsapi.surgicalsafety.com/api/media/"
+PRESENTER_API="https://insightsapi.surgicalsafety.com/api/media/presenter/"
 USERSEARCH_API="https://insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
