--- a/.env.test
+++ b/.env.test
@@ -26,6 +26,7 @@ EMMPUBLISH_API="https://test-insightsapi.surgicalsafety.com/api/enhancedMM/publi
 ONBOARD_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/modify"
 MEDIA_API="https://test-insightsapi.surgicalsafety.com/api/media/"
+PRESENTER_API="https://test-insightsapi.surgicalsafety.com/api/media/presenter/"
 USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
