Update password reset / phone reset to call User management

--- a/.env.cicd_dev
+++ b/.env.cicd_dev
@@ -10,6 +10,8 @@ USER_API="https://10.10.30.111:4004/api/Profile"
 USERMANAGEMENT_API="https://10.10.30.111:4009/api/users/"
 USERMANAGEMENTUSERROLES_API="https://10.10.30.111:4009/api/userroles/"
 USERMANAGEMENTRESET_API="https://10.10.30.111:4009/api/users/resetpassword"
+USERMANAGEMENTCHANGEMFA_API="https://10.10.30.111:4009/api/users/changemfa"
+USERMANAGEMENTCHANGEPASSWORD_API="https://10.10.30.111:4009/api/users/changepassword"
 USERMANAGMENTACTIVATE_API="https://10.10.30.111:4009/api/users/activate"
 USERMANAGEMENTACCESS_API="https://10.10.30.111:4009/api/users/access"
 LOCATIONROOM_API="https://10.10.30.111:4008/api/room/facility"
