--- a/.env.development
+++ b/.env.development
@@ -12,6 +12,8 @@ USERMANAGEMENT_API="https://localhost:5001/api/users/"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
 USERMANAGEMENTUSERROLES_MULTI_API="https://localhost:5001/api/userroles/multi"
 USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
+USERMANAGEMENTCHANGEMFA_API="https://localhost:5001/api/users/changemfa"
+USERMANAGEMENTCHANGEPASSWORD_API="https://localhost:5001/api/users/changepassword"
 USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
 USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
 USERMANAGEMENTROLES_API="https://localhost:5001/api/roles"
