--- a/.env.local
+++ b/.env.local
@@ -10,6 +10,8 @@ USER_API="http://192.168.86.25:5004/api/Profile"
 USERMANAGEMENT_API="http://192.168.86.25:5009/api/users/"
 USERMANAGEMENTUSERROLES_API="http://192.168.86.25:5009/api/userroles/"
 USERMANAGEMENTRESET_API="http://192.168.86.25:5009/api/users/resetpassword"
+USERMANAGEMENTCHANGEMFA_API="http://192.168.86.25:5009/api/users/changemfa"
+USERMANAGEMENTCHANGEPASSWORD_API="http://192.168.86.25:5009/api/users/changepassword"
 USERMANAGMENTACTIVATE_API="http://192.168.86.25:5009/api/users/activate"
 USERMANAGEMENTACCESS_API="http://192.168.86.25:5009/api/users/access"
 LOCATIONROOM_API="http://192.168.86.25:5008/api/room/facility"
