--- a/.env.production
+++ b/.env.production
@@ -11,6 +11,8 @@ USERMANAGEMENT_API="https://usersapi.surgicalsafety.com/api/users/"
 USERMANAGEMENTUSERROLES_API="https://usersapi.surgicalsafety.com/api/userroles/"
 USERMANAGEMENTUSERROLES_MULTI_API="https://usersapi.surgicalsafety.com/api/userroles/multi"
 USERMANAGEMENTRESET_API="https://usersapi.surgicalsafety.com/api/users/resetpassword"
+USERMANAGEMENTCHANGEMFA_API="https://usersapi.surgicalsafety.com/api/users/changemfa"
+USERMANAGEMENTCHANGEPASSWORD_API="https://usersapi.surgicalsafety.com/api/users/changepassword"
 USERMANAGMENTACTIVATE_API="https://usersapi.surgicalsafety.com/api/users/activate"
 USERMANAGEMENTACCESS_API="https://usersapi.surgicalsafety.com/api/users/access"
 USERMANAGEMENTROLES_API="https://usersapi.surgicalsafety.com/api/roles"
