--- a/.env.cicd_test
+++ b/.env.cicd_test
@@ -10,6 +10,8 @@ USER_API="https://10.10.30.111:5004/api/Profile"
 USERMANAGEMENT_API="https://10.10.30.111:5009/api/users/"
 USERMANAGEMENTUSERROLES_API="https://10.10.30.111:5009/api/userroles/"
 USERMANAGEMENTRESET_API="https://10.10.30.111:5009/api/users/resetpassword"
+USERMANAGEMENTCHANGEMFA_API="https://10.10.30.111:5009/api/users/changemfa"
+USERMANAGEMENTCHANGEPASSWORD_API="https://10.10.30.111:5009/api/users/changepassword"
 USERMANAGMENTACTIVATE_API="https://10.10.30.111:5009/api/users/activate"
 USERMANAGEMENTACCESS_API="https://10.10.30.111:5009/api/users/access"
 LOCATIONROOM_API="https://10.10.30.111:5008/api/room/facility"
