--- a/.env.uat
+++ b/.env.uat
@@ -12,6 +12,8 @@ USERMANAGEMENT_API="https://uat-users.surgicalsafety.com/api/users/"
 USERMANAGEMENTUSERROLES_API="https://uat-users.surgicalsafety.com/api/userroles/"
 USERMANAGEMENTUSERROLES_MULTI_API="https://uat-users.surgicalsafety.com/api/userroles/multi"
 USERMANAGEMENTRESET_API="https://uat-users.surgicalsafety.com/api/users/resetpassword"
+USERMANAGEMENTCHANGEMFA_API="https://uat-users.surgicalsafety.com/api/users/changemfa"
+USERMANAGEMENTCHANGEPASSWORD_API="https://uat-users.surgicalsafety.com/api/users/changepassword"
 USERMANAGMENTACTIVATE_API="https://uat-users.surgicalsafety.com/api/users/activate"
 USERMANAGEMENTACCESS_API="https://uat-users.surgicalsafety.com/api/users/access"
 USERMANAGEMENTROLES_API="https://uat-users.surgicalsafety.com/api/roles"
