https://surgicalsafety.atlassian.net/browse/EFFIN-5 https://surgicalsafety.atlassian.net/browse/EFFIN-8 finish Admin Panel - update Histogram colours - add custom tooltips

--- a/.env.test
+++ b/.env.test
@@ -35,7 +35,7 @@ EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm
 EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/efficiency/access"
 EFFICIENCY_API="https://test-insightsapi.surgicalsafety.com/api/efficiency"
-EFFICIENCYTILE_API="https://test-insightsapi.surgicalsafety.com/api/efficiency/tile"
+EFFICIENCYTILE_API="https://test-insightsapi.surgicalsafety.com/api/efficiency2/tile"
 SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
