--- a/.env.production
+++ b/.env.production
@@ -34,7 +34,7 @@ EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/acce
 EMMCASESREQUEST_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://insightsapi.surgicalsafety.com/api/efficiency/access"
 EFFICIENCY_API="https://insightsapi.surgicalsafety.com/api/efficiency"
-EFFICIENCYTILE_API="https://insightsapi.surgicalsafety.com/api/efficiency/tile"
+EFFICIENCYTILE_API="https://insightsapi.surgicalsafety.com/api/efficiency2/tile"
 SSC_ACCESS_API="https://insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
