--- a/.env.uat
+++ b/.env.uat
@@ -35,7 +35,7 @@ EMMPUBLISHACCESS_API="https://uat-insightsapi.surgicalsafety.com/api/enhancedmm/
 EMMCASESREQUEST_API="https://uat-insightsapi.surgicalsafety.com/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://uat-insightsapi.surgicalsafety.com/api/efficiency/access"
 EFFICIENCY_API="https://uat-insightsapi.surgicalsafety.com/api/efficiency"
-EFFICIENCYTILE_API="https://uat-insightsapi.surgicalsafety.com/api/efficiency/tile"
+EFFICIENCYTILE_API="https://uat-insightsapi.surgicalsafety.com/api/efficiency2/tile"
 SSC_ACCESS_API="https://uat-insightsapi.surgicalsafety.com/api/ssc/access"
 SSC_API="https://uat-insightsapi.surgicalsafety.com/api/ssc"
 SSC_REPORT_READY_DAY=15
