Update to remove middleman

--- a/.env.development
+++ b/.env.development
@@ -34,10 +34,10 @@ DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://localhost:5003/api/efficiency/access"
-EFFICIENCY_API="https://localhost:5003/api/efficiency"
-EFFICIENCYTILE_API="https://localhost:5003/api/efficiency2/tile"
+EFFICIENCY_API="http://127.0.0.1:8000/api/efficiency/v1"
+EFFICIENCYTILE_API="http://127.0.0.1:8000/api/efficiency/v1/tile"
 SSC_ACCESS_API="https://localhost:5003/api/ssc/access"
-SSC_API="https://localhost:5003/api/ssc"
+SSC_API="http://127.0.0.1:8003/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://localhost:5003/api/ssc/tile"
