--- a/.env.production
+++ b/.env.production
@@ -33,10 +33,10 @@ DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://insightsapi.surgicalsafety.com/api/efficiency/access"
-EFFICIENCY_API="https://insightsapi.surgicalsafety.com/api/efficiency"
-EFFICIENCYTILE_API="https://insightsapi.surgicalsafety.com/api/efficiency2/tile"
+EFFICIENCY_API="https://insights-api.surgicalsafety.com/api/efficiency/v1"
+EFFICIENCYTILE_API="https://insights-api.surgicalsafety.com/api/efficiency/v1/tile"
 SSC_ACCESS_API="https://insightsapi.surgicalsafety.com/api/ssc/access"
-SSC_API="https://insightsapi.surgicalsafety.com/api/ssc"
+SSC_API="https://insights-api.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://insightsapi.surgicalsafety.com/api/ssc/tile"
