--- a/.env.test
+++ b/.env.test
@@ -34,10 +34,10 @@ DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/til
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EMMCASESREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/efficiency/access"
-EFFICIENCY_API="https://test-insightsapi.surgicalsafety.com/api/efficiency"
-EFFICIENCYTILE_API="https://test-insightsapi.surgicalsafety.com/api/efficiency2/tile"
+EFFICIENCY_API="https://utils.surgicalsafety.com/api/efficiency/v1"
+EFFICIENCYTILE_API="https://utils.surgicalsafety.com/api/efficiency/v1/tile"
 SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
-SSC_API="https://test-insightsapi.surgicalsafety.com/api/ssc"
+SSC_API="https://utils.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
