--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "build:test": "npm run build:clean && cross-env NODE_ENV=test webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:uat": "npm run build:clean && cross-env NODE_ENV=UAT webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:clean": "rimraf ./build",
-    "build:local": "npm run build:clean && cross-env NODE_ENV=local webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",    
+    "build:local": "npm run build:clean && cross-env NODE_ENV=local webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:cicd_dev": "npm run build:clean && cross-env NODE_ENV=cicd_dev webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
-    "build:cicd_test": "npm run build:clean && cross-env NODE_ENV=cicd_test webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",    
-    "build:cicd_uat": "npm run build:clean && cross-env NODE_ENV=cicd_uat webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",    
+    "build:cicd_test": "npm run build:clean && cross-env NODE_ENV=cicd_test webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "build:cicd_uat": "npm run build:clean && cross-env NODE_ENV=cicd_uat webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "start": "cross-env NODE_ENV=development node server",
     "start:production": "npm run test && npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
@@ -143,6 +143,8 @@
     "shelljs": "0.8.1",
     "style-loader": "0.21.0",
     "url-loader": "1.0.1",
+    "video.js": "^7.11.4",
+    "videojs-contrib-eme": "^3.8.0",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.3",
     "webpack-dev-middleware": "3.1.3",
