Update emm video bugs and env files

--- a/.env.development
+++ b/.env.development
@@ -22,17 +22,17 @@ FACILITYLIST_API="https://localhost:5002/api/facility/list"
 FACILITYDEPARTMENT_API="https://localhost:5002/api/department/facility"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://localhost:5003/api/EnhancedMM/access/complication"
-EMMREQUEST_API="https://localhost:5003/api/EnhancedMM/request"
-EMMREPORT_API="https://localhost:5003/api/enhancedmm"
-EMMPUBLISH_API="https://localhost:5003/api/enhancedMM/publish"
+EMMREQUEST_API="http://127.0.0.1:8005/api/emm/v1/request"
+REQUESTEMM_API="https://localhost:5003/api/EnhancedMM/request"
+EMMREPORT_API="http://127.0.0.1:8005/api/emm/v1"
+EMMPUBLISH_API="http://127.0.0.1:8005/api/emm/v1/publish"
 ONBOARD_API="https://localhost:5003/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://localhost:5003/api/UserDetails/modify"
-MEDIA_API="https://localhost:5003/api/media/"
-PRESENTER_API="https://localhost:5003/api/media/presenter/"
+MEDIA_API="http://127.0.0.1:8005/api/emm/v1/media"
+PRESENTER_API="http://127.0.0.1:8005/api/emm/v1/presenter"
 USERSEARCH_API="https://localhost:5003/api/users"
 DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://localhost:5003/api/enhancedmm/access/emmpublish"
-EMMCASESREQUEST_API="https://localhost:5003/api/enhancedmm/request"
 EFFICIENCY_ACCESS_API="https://localhost:5003/api/efficiency/access"
 EFFICIENCY_API="http://127.0.0.1:8000/api/efficiency/v1"
 EFFICIENCYTILE_API="http://127.0.0.1:8000/api/efficiency/v1/tile"
