--- a/.env.test
+++ b/.env.test
@@ -22,13 +22,14 @@ FACILITYLIST_API="https://test-location.surgicalsafety.com/api/facility/list"
 FACILITYDEPARTMENT_API="https://test-location.surgicalsafety.com/api/department/facility"
 EMMACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
-EMMREQUEST_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/request"
-EMMREPORT_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm"
-EMMPUBLISH_API="https://test-insightsapi.surgicalsafety.com/api/enhancedMM/publish"
+EMMREQUEST_API="https://utils.surgicalsafety.com/api/emm/v1/request"
+REQUESTEMM_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/request"
+EMMREPORT_API="https://utils.surgicalsafety.com/api/emm/v1"
+EMMPUBLISH_API="https://utils.surgicalsafety.com/api/emm/v1/publish"
 ONBOARD_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/modify"
-MEDIA_API="https://test-insightsapi.surgicalsafety.com/api/media/"
-PRESENTER_API="https://test-insightsapi.surgicalsafety.com/api/media/presenter/"
+MEDIA_API="https://utils.surgicalsafety.com/api/emm/v1/media"
+PRESENTER_API="https://utils.surgicalsafety.com/api/emm/v1/presenter"
 USERSEARCH_API="https://test-insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
